ci: fix wrong action input

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,5 @@ jobs:
       if: always()
       uses: MishaKav/pytest-coverage-comment@main
       with:
-        pytest-coverage-path: coverage.xml
+        pytest-xml-coverage-path: coverage.xml
         junitxml-path: test-results.xml
