chore: use dynamic versioning

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
 [tox]
 min_version = 4.0
-envlist = py3{10,11,12}
+env_list = py3{10,11,12},lint
 
 [testenv]
 groups = test
 commands = test
+
+[testenv:lint]
+skip_install = true
+groups = lint test
+commands = lint
