--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "fastapi-problem-details"
-version = "0.1.0"
 description = "Structure your API errors with consistent and machine readable format using the RFC 9457 \"Problem Details for HTTP APIs\" standard"
 authors = [{ name = "g0di", email = "benoit.godard.p@gmail.com" }]
 dependencies = ["fastapi>=0.100.0", "pydantic>=2.0.0"]
@@ -28,6 +27,7 @@ classifiers = [
     "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
     "Topic :: Software Development :: Libraries",
 ]
+dynamic = ["version"]
 
 [project.urls]
 Homepage = "https://github.com/g0di/fastapi-problem-details"
@@ -42,6 +42,7 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+version = { source = "scm", write_to = "fastapi_problem_details/_version.py", write_template = '__version__ = "{}"' }
 
 [tool.pdm.dev-dependencies]
 lint = ["ruff>=0.0.13", "mypy>=0.1"]
