--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "fastapi-problem-details"
 version = "0.1.0"
-description = "Structure your API errors with consistent and machine readable format using the RFC 9457 \"Problem Details for HTTP APIs\" standard"
+description = "Structure your FastAPI APIs error responses with consistent and machine readable format using the RFC 9457 \"Problem Details for HTTP APIs\" standard"
 authors = [{ name = "g0di", email = "benoit.godard.p@gmail.com" }]
 dependencies = ["fastapi>=0.100.0", "pydantic>=2.0.0"]
 requires-python = ">=3.10"
